batchelor-condition/src/main/batchelor/condition/Parser.output
Grammatik

    0 $accept: programm $end

    1 programm: object_list

    2 object_list: %empty
    3            | object_list object

    4 object: IDENTIFIER_PROC '{' object_list '}'
    5       | IDENTIFIER_PROC STRING ':' IDENTIFIER '{' object_list '}'
    6       | IDENTIFIER_PROC ':' IDENTIFIER '{' object_list '}'
    7       | IDENTIFIER_VAR STRING ';'
    8       | IDENTIFIER_VAR STRING ':' number_sum ';'
    9       | IDENTIFIER_VAR ':' number_sum ';'
   10       | IDENTIFIER_VAR STRING ':' string_sum ';'
   11       | IDENTIFIER_VAR ':' string_sum ';'
   12       | IDENTIFIER_VAR STRING ':' bool_or ';'
   13       | IDENTIFIER_VAR ':' bool_or ';'

   14 number_sum: number_sum '+' number_fac
   15           | number_sum '-' number_fac
   16           | number_fac

   17 number_fac: number_fac '*' number_term
   18           | number_fac '/' number_term
   19           | number_term

   20 number_term: NUMBER
   21            | '(' number_sum ')'

   22 string_sum: string_sum '+' string_term
   23           | string_term

   24 string_term: STRING
   25            | '(' string_sum ')'

   26 bool_or: bool_or IDENTIFIER_OR bool_and
   27        | bool_and

   28 bool_and: bool_and IDENTIFIER_AND bool_not
   29         | bool_not

   30 bool_not: '!' bool_not
   31         | bool_term

   32 bool_term: IDENTIFIER_TRUE
   33          | IDENTIFIER_FALSE
   34          | '(' bool_or ')'


Terminale und die Regeln, in denen sie verwendet werden

    $end (0) 0
    '!' (33) 30
    '(' (40) 21 25 34
    ')' (41) 21 25 34
    '*' (42) 17
    '+' (43) 14 22
    '-' (45) 15
    '/' (47) 18
    ':' (58) 5 6 8 9 10 11 12 13
    ';' (59) 7 8 9 10 11 12 13
    '{' (123) 4 5 6
    '}' (125) 4 5 6
    error (256)
    IDENTIFIER <std::string> (258) 5 6
    IDENTIFIER_PROC (259) 4 5 6
    IDENTIFIER_VAR (260) 7 8 9 10 11 12 13
    NUMBER <double> (261) 20
    STRING <std::string> (262) 5 7 8 10 12 24
    IDENTIFIER_AND (263) 28
    IDENTIFIER_OR (264) 26
    IDENTIFIER_TRUE (265) 32
    IDENTIFIER_FALSE (266) 33


Nicht-Terminal und die Regeln, in denen sie verwendet werden

    $accept (23)
        auf der linken Seite: 0
    programm <CObject> (24)
        auf der linken Seite: 1
        auf der rechten Seite: 0
    object_list <CObjectList> (25)
        auf der linken Seite: 2 3
        auf der rechten Seite: 1 3 4 5 6
    object <CObject> (26)
        auf der linken Seite: 4 5 6 7 8 9 10 11 12 13
        auf der rechten Seite: 3
    number_sum <double> (27)
        auf der linken Seite: 14 15 16
        auf der rechten Seite: 8 9 14 15 21
    number_fac <double> (28)
        auf der linken Seite: 17 18 19
        auf der rechten Seite: 14 15 16 17 18
    number_term <double> (29)
        auf der linken Seite: 20 21
        auf der rechten Seite: 17 18 19
    string_sum <std::string> (30)
        auf der linken Seite: 22 23
        auf der rechten Seite: 10 11 22 25
    string_term <std::string> (31)
        auf der linken Seite: 24 25
        auf der rechten Seite: 22 23
    bool_or <bool> (32)
        auf der linken Seite: 26 27
        auf der rechten Seite: 12 13 26 34
    bool_and <bool> (33)
        auf der linken Seite: 28 29
        auf der rechten Seite: 26 27 28
    bool_not <bool> (34)
        auf der linken Seite: 30 31
        auf der rechten Seite: 28 29 30
    bool_term <bool> (35)
        auf der linken Seite: 32 33 34
        auf der rechten Seite: 31


Zustand 0

    0 $accept: . programm $end

    $default  reduziere mit Regel 2 (object_list)

    programm     gehe zu Zustand 1 über
    object_list  gehe zu Zustand 2 über


Zustand 1

    0 $accept: programm . $end

    $end  schiebe und gehe zu Zustand 3 über


Zustand 2

    1 programm: object_list .
    3 object_list: object_list . object

    IDENTIFIER_PROC  schiebe und gehe zu Zustand 4 über
    IDENTIFIER_VAR   schiebe und gehe zu Zustand 5 über

    $default  reduziere mit Regel 1 (programm)

    object  gehe zu Zustand 6 über


Zustand 3

    0 $accept: programm $end .

    $default  annehmen


Zustand 4

    4 object: IDENTIFIER_PROC . '{' object_list '}'
    5       | IDENTIFIER_PROC . STRING ':' IDENTIFIER '{' object_list '}'
    6       | IDENTIFIER_PROC . ':' IDENTIFIER '{' object_list '}'

    STRING  schiebe und gehe zu Zustand 7 über
    '{'     schiebe und gehe zu Zustand 8 über
    ':'     schiebe und gehe zu Zustand 9 über


Zustand 5

    7 object: IDENTIFIER_VAR . STRING ';'
    8       | IDENTIFIER_VAR . STRING ':' number_sum ';'
    9       | IDENTIFIER_VAR . ':' number_sum ';'
   10       | IDENTIFIER_VAR . STRING ':' string_sum ';'
   11       | IDENTIFIER_VAR . ':' string_sum ';'
   12       | IDENTIFIER_VAR . STRING ':' bool_or ';'
   13       | IDENTIFIER_VAR . ':' bool_or ';'

    STRING  schiebe und gehe zu Zustand 10 über
    ':'     schiebe und gehe zu Zustand 11 über


Zustand 6

    3 object_list: object_list object .

    $default  reduziere mit Regel 3 (object_list)


Zustand 7

    5 object: IDENTIFIER_PROC STRING . ':' IDENTIFIER '{' object_list '}'

    ':'  schiebe und gehe zu Zustand 12 über


Zustand 8

    4 object: IDENTIFIER_PROC '{' . object_list '}'

    $default  reduziere mit Regel 2 (object_list)

    object_list  gehe zu Zustand 13 über


Zustand 9

    6 object: IDENTIFIER_PROC ':' . IDENTIFIER '{' object_list '}'

    IDENTIFIER  schiebe und gehe zu Zustand 14 über


Zustand 10

    7 object: IDENTIFIER_VAR STRING . ';'
    8       | IDENTIFIER_VAR STRING . ':' number_sum ';'
   10       | IDENTIFIER_VAR STRING . ':' string_sum ';'
   12       | IDENTIFIER_VAR STRING . ':' bool_or ';'

    ':'  schiebe und gehe zu Zustand 15 über
    ';'  schiebe und gehe zu Zustand 16 über


Zustand 11

    9 object: IDENTIFIER_VAR ':' . number_sum ';'
   11       | IDENTIFIER_VAR ':' . string_sum ';'
   13       | IDENTIFIER_VAR ':' . bool_or ';'

    NUMBER            schiebe und gehe zu Zustand 17 über
    STRING            schiebe und gehe zu Zustand 18 über
    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 21 über
    '!'               schiebe und gehe zu Zustand 22 über

    number_sum   gehe zu Zustand 23 über
    number_fac   gehe zu Zustand 24 über
    number_term  gehe zu Zustand 25 über
    string_sum   gehe zu Zustand 26 über
    string_term  gehe zu Zustand 27 über
    bool_or      gehe zu Zustand 28 über
    bool_and     gehe zu Zustand 29 über
    bool_not     gehe zu Zustand 30 über
    bool_term    gehe zu Zustand 31 über


Zustand 12

    5 object: IDENTIFIER_PROC STRING ':' . IDENTIFIER '{' object_list '}'

    IDENTIFIER  schiebe und gehe zu Zustand 32 über


Zustand 13

    3 object_list: object_list . object
    4 object: IDENTIFIER_PROC '{' object_list . '}'

    IDENTIFIER_PROC  schiebe und gehe zu Zustand 4 über
    IDENTIFIER_VAR   schiebe und gehe zu Zustand 5 über
    '}'              schiebe und gehe zu Zustand 33 über

    object  gehe zu Zustand 6 über


Zustand 14

    6 object: IDENTIFIER_PROC ':' IDENTIFIER . '{' object_list '}'

    '{'  schiebe und gehe zu Zustand 34 über


Zustand 15

    8 object: IDENTIFIER_VAR STRING ':' . number_sum ';'
   10       | IDENTIFIER_VAR STRING ':' . string_sum ';'
   12       | IDENTIFIER_VAR STRING ':' . bool_or ';'

    NUMBER            schiebe und gehe zu Zustand 17 über
    STRING            schiebe und gehe zu Zustand 18 über
    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 21 über
    '!'               schiebe und gehe zu Zustand 22 über

    number_sum   gehe zu Zustand 35 über
    number_fac   gehe zu Zustand 24 über
    number_term  gehe zu Zustand 25 über
    string_sum   gehe zu Zustand 36 über
    string_term  gehe zu Zustand 27 über
    bool_or      gehe zu Zustand 37 über
    bool_and     gehe zu Zustand 29 über
    bool_not     gehe zu Zustand 30 über
    bool_term    gehe zu Zustand 31 über


Zustand 16

    7 object: IDENTIFIER_VAR STRING ';' .

    $default  reduziere mit Regel 7 (object)


Zustand 17

   20 number_term: NUMBER .

    $default  reduziere mit Regel 20 (number_term)


Zustand 18

   24 string_term: STRING .

    $default  reduziere mit Regel 24 (string_term)


Zustand 19

   32 bool_term: IDENTIFIER_TRUE .

    $default  reduziere mit Regel 32 (bool_term)


Zustand 20

   33 bool_term: IDENTIFIER_FALSE .

    $default  reduziere mit Regel 33 (bool_term)


Zustand 21

   21 number_term: '(' . number_sum ')'
   25 string_term: '(' . string_sum ')'
   34 bool_term: '(' . bool_or ')'

    NUMBER            schiebe und gehe zu Zustand 17 über
    STRING            schiebe und gehe zu Zustand 18 über
    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 21 über
    '!'               schiebe und gehe zu Zustand 22 über

    number_sum   gehe zu Zustand 38 über
    number_fac   gehe zu Zustand 24 über
    number_term  gehe zu Zustand 25 über
    string_sum   gehe zu Zustand 39 über
    string_term  gehe zu Zustand 27 über
    bool_or      gehe zu Zustand 40 über
    bool_and     gehe zu Zustand 29 über
    bool_not     gehe zu Zustand 30 über
    bool_term    gehe zu Zustand 31 über


Zustand 22

   30 bool_not: '!' . bool_not

    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 41 über
    '!'               schiebe und gehe zu Zustand 22 über

    bool_not   gehe zu Zustand 42 über
    bool_term  gehe zu Zustand 31 über


Zustand 23

    9 object: IDENTIFIER_VAR ':' number_sum . ';'
   14 number_sum: number_sum . '+' number_fac
   15           | number_sum . '-' number_fac

    ';'  schiebe und gehe zu Zustand 43 über
    '+'  schiebe und gehe zu Zustand 44 über
    '-'  schiebe und gehe zu Zustand 45 über


Zustand 24

   16 number_sum: number_fac .
   17 number_fac: number_fac . '*' number_term
   18           | number_fac . '/' number_term

    '*'  schiebe und gehe zu Zustand 46 über
    '/'  schiebe und gehe zu Zustand 47 über

    $default  reduziere mit Regel 16 (number_sum)


Zustand 25

   19 number_fac: number_term .

    $default  reduziere mit Regel 19 (number_fac)


Zustand 26

   11 object: IDENTIFIER_VAR ':' string_sum . ';'
   22 string_sum: string_sum . '+' string_term

    ';'  schiebe und gehe zu Zustand 48 über
    '+'  schiebe und gehe zu Zustand 49 über


Zustand 27

   23 string_sum: string_term .

    $default  reduziere mit Regel 23 (string_sum)


Zustand 28

   13 object: IDENTIFIER_VAR ':' bool_or . ';'
   26 bool_or: bool_or . IDENTIFIER_OR bool_and

    IDENTIFIER_OR  schiebe und gehe zu Zustand 50 über
    ';'            schiebe und gehe zu Zustand 51 über


Zustand 29

   27 bool_or: bool_and .
   28 bool_and: bool_and . IDENTIFIER_AND bool_not

    IDENTIFIER_AND  schiebe und gehe zu Zustand 52 über

    $default  reduziere mit Regel 27 (bool_or)


Zustand 30

   29 bool_and: bool_not .

    $default  reduziere mit Regel 29 (bool_and)


Zustand 31

   31 bool_not: bool_term .

    $default  reduziere mit Regel 31 (bool_not)


Zustand 32

    5 object: IDENTIFIER_PROC STRING ':' IDENTIFIER . '{' object_list '}'

    '{'  schiebe und gehe zu Zustand 53 über


Zustand 33

    4 object: IDENTIFIER_PROC '{' object_list '}' .

    $default  reduziere mit Regel 4 (object)


Zustand 34

    6 object: IDENTIFIER_PROC ':' IDENTIFIER '{' . object_list '}'

    $default  reduziere mit Regel 2 (object_list)

    object_list  gehe zu Zustand 54 über


Zustand 35

    8 object: IDENTIFIER_VAR STRING ':' number_sum . ';'
   14 number_sum: number_sum . '+' number_fac
   15           | number_sum . '-' number_fac

    ';'  schiebe und gehe zu Zustand 55 über
    '+'  schiebe und gehe zu Zustand 44 über
    '-'  schiebe und gehe zu Zustand 45 über


Zustand 36

   10 object: IDENTIFIER_VAR STRING ':' string_sum . ';'
   22 string_sum: string_sum . '+' string_term

    ';'  schiebe und gehe zu Zustand 56 über
    '+'  schiebe und gehe zu Zustand 49 über


Zustand 37

   12 object: IDENTIFIER_VAR STRING ':' bool_or . ';'
   26 bool_or: bool_or . IDENTIFIER_OR bool_and

    IDENTIFIER_OR  schiebe und gehe zu Zustand 50 über
    ';'            schiebe und gehe zu Zustand 57 über


Zustand 38

   14 number_sum: number_sum . '+' number_fac
   15           | number_sum . '-' number_fac
   21 number_term: '(' number_sum . ')'

    '+'  schiebe und gehe zu Zustand 44 über
    '-'  schiebe und gehe zu Zustand 45 über
    ')'  schiebe und gehe zu Zustand 58 über


Zustand 39

   22 string_sum: string_sum . '+' string_term
   25 string_term: '(' string_sum . ')'

    '+'  schiebe und gehe zu Zustand 49 über
    ')'  schiebe und gehe zu Zustand 59 über


Zustand 40

   26 bool_or: bool_or . IDENTIFIER_OR bool_and
   34 bool_term: '(' bool_or . ')'

    IDENTIFIER_OR  schiebe und gehe zu Zustand 50 über
    ')'            schiebe und gehe zu Zustand 60 über


Zustand 41

   34 bool_term: '(' . bool_or ')'

    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 41 über
    '!'               schiebe und gehe zu Zustand 22 über

    bool_or    gehe zu Zustand 40 über
    bool_and   gehe zu Zustand 29 über
    bool_not   gehe zu Zustand 30 über
    bool_term  gehe zu Zustand 31 über


Zustand 42

   30 bool_not: '!' bool_not .

    $default  reduziere mit Regel 30 (bool_not)


Zustand 43

    9 object: IDENTIFIER_VAR ':' number_sum ';' .

    $default  reduziere mit Regel 9 (object)


Zustand 44

   14 number_sum: number_sum '+' . number_fac

    NUMBER  schiebe und gehe zu Zustand 17 über
    '('     schiebe und gehe zu Zustand 61 über

    number_fac   gehe zu Zustand 62 über
    number_term  gehe zu Zustand 25 über


Zustand 45

   15 number_sum: number_sum '-' . number_fac

    NUMBER  schiebe und gehe zu Zustand 17 über
    '('     schiebe und gehe zu Zustand 61 über

    number_fac   gehe zu Zustand 63 über
    number_term  gehe zu Zustand 25 über


Zustand 46

   17 number_fac: number_fac '*' . number_term

    NUMBER  schiebe und gehe zu Zustand 17 über
    '('     schiebe und gehe zu Zustand 61 über

    number_term  gehe zu Zustand 64 über


Zustand 47

   18 number_fac: number_fac '/' . number_term

    NUMBER  schiebe und gehe zu Zustand 17 über
    '('     schiebe und gehe zu Zustand 61 über

    number_term  gehe zu Zustand 65 über


Zustand 48

   11 object: IDENTIFIER_VAR ':' string_sum ';' .

    $default  reduziere mit Regel 11 (object)


Zustand 49

   22 string_sum: string_sum '+' . string_term

    STRING  schiebe und gehe zu Zustand 18 über
    '('     schiebe und gehe zu Zustand 66 über

    string_term  gehe zu Zustand 67 über


Zustand 50

   26 bool_or: bool_or IDENTIFIER_OR . bool_and

    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 41 über
    '!'               schiebe und gehe zu Zustand 22 über

    bool_and   gehe zu Zustand 68 über
    bool_not   gehe zu Zustand 30 über
    bool_term  gehe zu Zustand 31 über


Zustand 51

   13 object: IDENTIFIER_VAR ':' bool_or ';' .

    $default  reduziere mit Regel 13 (object)


Zustand 52

   28 bool_and: bool_and IDENTIFIER_AND . bool_not

    IDENTIFIER_TRUE   schiebe und gehe zu Zustand 19 über
    IDENTIFIER_FALSE  schiebe und gehe zu Zustand 20 über
    '('               schiebe und gehe zu Zustand 41 über
    '!'               schiebe und gehe zu Zustand 22 über

    bool_not   gehe zu Zustand 69 über
    bool_term  gehe zu Zustand 31 über


Zustand 53

    5 object: IDENTIFIER_PROC STRING ':' IDENTIFIER '{' . object_list '}'

    $default  reduziere mit Regel 2 (object_list)

    object_list  gehe zu Zustand 70 über


Zustand 54

    3 object_list: object_list . object
    6 object: IDENTIFIER_PROC ':' IDENTIFIER '{' object_list . '}'

    IDENTIFIER_PROC  schiebe und gehe zu Zustand 4 über
    IDENTIFIER_VAR   schiebe und gehe zu Zustand 5 über
    '}'              schiebe und gehe zu Zustand 71 über

    object  gehe zu Zustand 6 über


Zustand 55

    8 object: IDENTIFIER_VAR STRING ':' number_sum ';' .

    $default  reduziere mit Regel 8 (object)


Zustand 56

   10 object: IDENTIFIER_VAR STRING ':' string_sum ';' .

    $default  reduziere mit Regel 10 (object)


Zustand 57

   12 object: IDENTIFIER_VAR STRING ':' bool_or ';' .

    $default  reduziere mit Regel 12 (object)


Zustand 58

   21 number_term: '(' number_sum ')' .

    $default  reduziere mit Regel 21 (number_term)


Zustand 59

   25 string_term: '(' string_sum ')' .

    $default  reduziere mit Regel 25 (string_term)


Zustand 60

   34 bool_term: '(' bool_or ')' .

    $default  reduziere mit Regel 34 (bool_term)


Zustand 61

   21 number_term: '(' . number_sum ')'

    NUMBER  schiebe und gehe zu Zustand 17 über
    '('     schiebe und gehe zu Zustand 61 über

    number_sum   gehe zu Zustand 38 über
    number_fac   gehe zu Zustand 24 über
    number_term  gehe zu Zustand 25 über


Zustand 62

   14 number_sum: number_sum '+' number_fac .
   17 number_fac: number_fac . '*' number_term
   18           | number_fac . '/' number_term

    '*'  schiebe und gehe zu Zustand 46 über
    '/'  schiebe und gehe zu Zustand 47 über

    $default  reduziere mit Regel 14 (number_sum)


Zustand 63

   15 number_sum: number_sum '-' number_fac .
   17 number_fac: number_fac . '*' number_term
   18           | number_fac . '/' number_term

    '*'  schiebe und gehe zu Zustand 46 über
    '/'  schiebe und gehe zu Zustand 47 über

    $default  reduziere mit Regel 15 (number_sum)


Zustand 64

   17 number_fac: number_fac '*' number_term .

    $default  reduziere mit Regel 17 (number_fac)


Zustand 65

   18 number_fac: number_fac '/' number_term .

    $default  reduziere mit Regel 18 (number_fac)


Zustand 66

   25 string_term: '(' . string_sum ')'

    STRING  schiebe und gehe zu Zustand 18 über
    '('     schiebe und gehe zu Zustand 66 über

    string_sum   gehe zu Zustand 39 über
    string_term  gehe zu Zustand 27 über


Zustand 67

   22 string_sum: string_sum '+' string_term .

    $default  reduziere mit Regel 22 (string_sum)


Zustand 68

   26 bool_or: bool_or IDENTIFIER_OR bool_and .
   28 bool_and: bool_and . IDENTIFIER_AND bool_not

    IDENTIFIER_AND  schiebe und gehe zu Zustand 52 über

    $default  reduziere mit Regel 26 (bool_or)


Zustand 69

   28 bool_and: bool_and IDENTIFIER_AND bool_not .

    $default  reduziere mit Regel 28 (bool_and)


Zustand 70

    3 object_list: object_list . object
    5 object: IDENTIFIER_PROC STRING ':' IDENTIFIER '{' object_list . '}'

    IDENTIFIER_PROC  schiebe und gehe zu Zustand 4 über
    IDENTIFIER_VAR   schiebe und gehe zu Zustand 5 über
    '}'              schiebe und gehe zu Zustand 72 über

    object  gehe zu Zustand 6 über


Zustand 71

    6 object: IDENTIFIER_PROC ':' IDENTIFIER '{' object_list '}' .

    $default  reduziere mit Regel 6 (object)


Zustand 72

    5 object: IDENTIFIER_PROC STRING ':' IDENTIFIER '{' object_list '}' .

    $default  reduziere mit Regel 5 (object)
